--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.BackServices.Contracts/TheS.Casinova.ChipExchange.BackServices.Contracts.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.BackServices.Contracts/TheS.Casinova.ChipExchange.BackServices.Contracts.csproj
@@ -40,11 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackServices\IChipsExchangeModuleBackService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="BackServices\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Chat\TheS.Casinova.Chat.Commands\TheS.Casinova.Chat.Commands.csproj">
       <Project>{D2D7DFFA-E259-4E8F-A505-E9F68E39E234}</Project>
@@ -61,6 +60,10 @@
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
       <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
       <Name>TheS.Casinova.Common.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.ChipExchange.Commands\TheS.Casinova.ChipExchange.Commands.csproj">
+      <Project>{783249CD-793F-4C2C-BE6C-980C70FAB6DD}</Project>
+      <Name>TheS.Casinova.ChipExchange.Commands</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
